# mlwrap

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
mlwrap/: config.py  dto.py  encoders.py  enums.py  estimators.py  feature_selection.py  io.py  pipeline.py  preparation.py  runners.py  sampling.py  scores.py  utils.py
mlwrap/algorithms/: __init__.py  base.py  keras.py  lightgbm.py  sklearn.py
mlwrap/data/: cleaning.py  config.py  encoders.py  preparation.py  sampling.py
mlwrap/explainers/: __init__.py  base.py  lightgbm.py  shap.py  sklearn.py
notebooks/: titanic.ipynb
tests/: conftest.py  datasets.py  test_encoders.py  test_preparation.py  test_runners.py  test_sampling.py  test_scores.py
tests/data/: test_cleaning.py  test_encoders.py  test_preparation.py  test_sampling.py
