[tool.poetry]
name = "mlwrap"
version = "0.1.0"
description = ""
authors = ["Ross Parkin <ross.parkin@armakuni.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "1.3"
scikit-learn = "^1.0.2"
imblearn = "^0.0"
lightgbm = { version = "^3.3.2", optional = true }
shap = "0.40.0"
numba = { version = "^0.56.0", optional = true }
tensorflow-aarch64 = { version = "2.8.2", markers = "platform_machine == 'aarch64'", optional = true }
tensorflow = { version = "2.8.2", markers = "platform_machine == 'x86_64'", optional = true }
numpy = "1.22"
scikeras = { version = "^0.9.0", optional = true }
tensorflow-io-gcs-filesystem = { version = "0.26.0", optional = true }
feature-engine = "^1.4.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[tool.poetry.extras]
tensorflow = ["tensorflow-aarch64", "tensorflow", "tensorflow-io-gcs-filesystem", "scikeras"]
xai = ["shap", "numba"]
lightgbm = ["lightgbm"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
