[tool.poetry]
name = "mlwrap"
version = "0.1.0"
description = ""
authors = ["Ross Parkin <ross.parkin@armakuni.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.2"
scikit-learn = "^1.4.1"
lightgbm = { version = "^4.4.0", optional = true }
shap = "0.45.0"
numba = { version = "^0.60.0", optional = true }
tensorflow-aarch64 = { version = "2.15.0", markers = "platform_machine == 'aarch64'", optional = true }
tensorflow = { version = "2.15.0", markers = "platform_machine == 'x86_64'", optional = true }
numpy = "^1.26.4"
scikeras = { version = "^0.12.0", optional = true }
tensorflow-io-gcs-filesystem = { version = "0.31.0", optional = true }
feature-engine = "^1.6.2"
imbalanced-learn = "^0.12.3"

[tool.poetry.dev-dependencies]
black = "^24.4.2"

[tool.poetry.extras]
tensorflow = ["tensorflow-aarch64", "tensorflow", "tensorflow-io-gcs-filesystem", "scikeras"]
xai = ["shap", "numba"]
lightgbm = ["lightgbm"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
